fully implement new system (this would not be possible without nico, tysm ily <3)
Co-authored-by: ElNico56 <ElNico56@users.noreply.github.com>